# WaferAlignment

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci.yml
bindings/: wafer_simulator_bindings.cpp
python/: requirements.txt  test_simulator.py
python/src/: simulator.py
python/src/envs/: basic_motion_env.py
python/src/logs/basic_motion/PPO_1/: events.out.tfevents.1760552370.DESKTOP-BP4I6KI.20152.0
python/src/logs/basic_motion/PPO_2/: events.out.tfevents.1760552953.DESKTOP-BP4I6KI.20824.0
python/src/scripts/: play_policy.py  play_policy_visual.py  train_basic_motion.py
python/src/simulator/: data_storage.py
python/tests/: test_pytest.py  test_simulator.py
simulator/: CMakeLists.txt  simulator.sln
simulator/bindings/: wafer_simulator_bindings.cpp
simulator/simulator/: WaferSimulator.cpp  WaferSimulator.h  simulator.cpp  simulator.vcxproj  simulator.vcxproj.filters
simulator/simulator_app/: simulator_app.cpp  simulator_app.vcxproj  simulator_app.vcxproj.filters
simulator/simulator_tests/: simulator_tests.cpp  simulator_tests.vcxproj  simulator_tests.vcxproj.filters  wafer_reset_test.cpp
